# airflow_metadata

./: README.md  pyproject.toml
src/metadata_manager/: api.py  connections.py  dags.py  metadata_manager_base.py  pools.py  roles.py  variables.py
